# resume-term

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.md  build.yml
docs/: config.example.yaml
docs/dev/: 20260515.plan.md  20260616.4phase.ds.md
lib/: main.dart
lib/ffi/: native_bridge.dart
lib/models/: workspace_config.dart
lib/services/: config_store.dart  shell_defaults.dart  terminal_service.dart
lib/ui/: home_page.dart
lib/widgets/: terminal_pane.dart
rust/: Cargo.toml
rust/src/: ffi_bridge.rs  lib.rs  logger.rs  model.rs  pty_manager.rs  shell.rs
test/: widget_test.dart
