[package]
name = "resume-term-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "resume_term_core"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
portable-pty = "0.8"
ctor = "0.2"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = 3
